fixing vertical align

--- a/style.css
+++ b/style.css
@@ -66,8 +66,7 @@ table {
 	left: 50%;
 	margin-left: -470px;
 	background-color: white;
-	padding-left: 30px;
-	padding-right: 30px;
+	padding: 17px 30px;
 }
 
 .headernavlink {
@@ -104,8 +103,7 @@ table {
 	height: 50px;
 	background-color: white;
 	margin: 0px auto;
-	padding-left: 30px;
-	padding-right: 30px;
+	padding: 17px 30px;
 }
 
 .lefttopnav {
@@ -132,6 +130,7 @@ table {
 	width: 100%;
 	height: 60px;
 	background-color: #005575;
+	padding: 13px 0px;
 }
 
 .newsletterform {
@@ -153,6 +152,7 @@ table {
 	color: #D3D3D3;
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 14px;
+	vertical-align: middle;
 }
 
 .emailfieldcontainer {
